--- a/lectures/latex/slides.tex
+++ b/lectures/latex/slides.tex
@@ -11,6 +11,8 @@
 \usepackage{../../latex-support/leftrightexample-new} % Per Foreby
 \usecolortheme{lucolors}
 
+\usepackage{beamerutil}
+
 % The Madrid theme, for some reason, does not show bullet points in itemize
 % environments. This is a workaround to fix that.
 \setbeamertemplate{itemize item}[default]
