Big update on LaTeX slides, still WIP

--- a/latex-support/leftrightexample-new.sty
+++ b/latex-support/leftrightexample-new.sty
@@ -40,12 +40,13 @@
 \footnotesize
   \vspace{4pt}
   \list{}{\leftmargin\parindent}\item[]
-  \begin{minipage}[t]{6cm}
+  \begin{minipage}[t]{.4\textwidth}
 %  \begin{minipage}[t]{7.8cm}
     \verbatiminput{ex/ex.\arabic{ectr}}
     %\verbatiminput{ex/fixed_ex.\arabic{ectr}}
   \end{minipage}
-  \begin{minipage}[t]{5cm}
+  \hspace{.05\textwidth}
+  \begin{minipage}[t]{.4\textwidth}
 %  \begin{minipage}[t]{4.8cm}
     \@input{ex/ex.\arabic{ectr}}
     % \@input{ex/demo/ex.\arabic{ectr}}
